--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
    HCI researcher at Social Futures Lab, Paul.G. Allen School of Computer Science & Engineering, University of Washington.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://samw0627.github.io" # the base hostname & protocol for your site
-production_url: ""https://samw0627.github.io"
+production_url: "https://samw0627.github.io"
 github_username: samw0627
 permalink: /blog/:year/:month/:title.html
 
