--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,26 +3,21 @@ name: Build and Deploy
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
 jobs:
-  build-and-deploy:
+  github-pages:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: ruby/setup-ruby@v1
+      - uses: actions/configure-pages@v3
+      - uses: actions/jekyll-build-pages@v1
         with:
-          ruby-version: '3'
-      - name: Update Gem
-        run: gem update --system
-      - name: Install Gems
-        run: bundle install
-      - name: Build Jekyll
-        run: bundle exec jekyll build
+          source: ./
+          destination: ./_site
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/master'
+        id: deployment
+        uses: actions/deploy-pages@v2
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./_site
+          token: ${{ github.token }}
