--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,10 +2,10 @@
 - title: VizGroup
   #url: https://uwdata.github.io/draco
   code: https://github.com/uwdata/draco
-  paper: /papers/2018-Draco-InfoVis.pdf
+  paper: papers/2024-VizGroup.pdf
   DOI: https://dl.acm.org/doi/10.1145/3654777.3676347
   #recording: https://vimeo.com/308980888
-  image: images/vizgroup.png
+  image: /images/vizgroup.png
   description: "Vizgroup is an LLMs-assisted system for real-time collaborative learning analytics, visualizes student performance and
 collaboration via a dynamic 2D scatter plot and provides proactive notifications for timely interventions."
   highlight: 1
@@ -13,21 +13,21 @@ collaboration via a dynamic 2D scatter plot and provides proactive notifications
 - title: VizPI
   url: https://vizpi.org/
   #code: https://github.com/uwdata/draco
-  paper: /papers/2018-Draco-InfoVis.pdf
+  paper: papers/2023-VizGroup.pdf
   DOI: https://dl.acm.org/doi/10.1145/3586182.3616632
   #recording: https://vimeo.com/308980888
-  image: images/vizpi.png
+  image: /images/vizpi.png
   description: "VizPI is a system that helps instructors understand and monitor student's group discussion in real time."
   highlight: 2
 
 - title: SPHERE
-  url: https://www.cs.washington.edu/research/sphere/
-  image: images/sphere.png
+  image: /images/sphere.png
+  paper: /paper/2024-SPHEREv1.pdf
   description: "SPHERE is a system that helps instructors to give feedback to students at scale."
   #highlight: 1
 
 - title: SmartDrop
-  image: images/smartdrop.png
+  image: /images/smartdrop.png
   description: "Smartdrop is an accessible eyedrop dispenser for people with low vision and motor disabilities."
   highlight: 3
 
