image path change

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,7 +5,7 @@
   paper: papers/2024-VizGroup.pdf
   DOI: https://dl.acm.org/doi/10.1145/3654777.3676347
   #recording: https://vimeo.com/308980888
-  image: /images/vizgroup.png
+  image: vizgroup.png
   description: "Vizgroup is an LLMs-assisted system for real-time collaborative learning analytics, visualizes student performance and
 collaboration via a dynamic 2D scatter plot and provides proactive notifications for timely interventions."
   highlight: 1
@@ -16,18 +16,18 @@ collaboration via a dynamic 2D scatter plot and provides proactive notifications
   paper: papers/2023-VizGroup.pdf
   DOI: https://dl.acm.org/doi/10.1145/3586182.3616632
   #recording: https://vimeo.com/308980888
-  image: /images/vizpi.png
+  image: vizpi.png
   description: "VizPI is a system that helps instructors understand and monitor student's group discussion in real time."
   highlight: 2
 
 - title: SPHERE
-  image: /images/sphere.png
+  image: sphere.png
   paper: /paper/2024-SPHEREv1.pdf
   description: "SPHERE is a system that helps instructors to give feedback to students at scale."
   #highlight: 1
 
 - title: SmartDrop
-  image: /images/smartdrop.png
+  image: smartdrop.png
   description: "Smartdrop is an accessible eyedrop dispenser for people with low vision and motor disabilities."
   highlight: 3
 
